[package]
name = "cargo-nocode"
version = "0.1.0"
description = "Cargo subcommand to bootstrap nocode applications. Write nothing; deploy nowhere."
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/cargo-nocode"
repository = "https://github.com/orhun/cargo-nocode"
edition = "2021"

[dependencies]
